--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -24,6 +24,6 @@
            <!-- Your message can go here. -->
          </div>
    </div>
-
+<script src="javascript/angular.min.js"></script>
 </body>
 </html>
