--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -21,7 +21,7 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkIt()">Check If Too Much</button>
          </div>
-         <div class="form-group message">
+         <div class="form-group message" style="color:{{color}};">
            <!-- Your message can go here. -->
            {{message}}
            <br>
