implement bordercolor to input field

--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -16,7 +16,8 @@
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control"
-             ng-model="lunch">
+             ng-model="lunch"
+             style="border-color:{{borderColor}};">
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkIt()">Check If Too Much</button>
