--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -18,6 +18,7 @@
              class="form-control"
              ng-model="lunch"
              style="border-color:{{borderColor}};">
+             <!-- I do NOT consider an empty item, i.e., , , as an item towards to the count -->
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkIt()">Check If Too Much</button>
@@ -25,10 +26,6 @@
          <div class="form-group message" style="color:{{color}};">
            <!-- Your message can go here. -->
            {{message}}
-           <br>
-           {{lunch}}
-                      <br>
-           {{len}}
          </div>
    </div>
 <script src="javascript/angular.min.js"></script>
